--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="orange-color">Atik Sabab</span> World</h1>
-            <h3> Build Climber and Train Stopper </h3>
-            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
-                work.
+            <h3> Who Am I? </h3>
+            <p>I am a person who is positive about every aspect of life. There are many things I like to do, to see, and
+                to experience. I like to read, I like to think, I like to dream. I like to see the moonlight at night; I
+                like to feel the music flowing on my face, I like to smell the wind coming from the ocean.
                 That's why I am learning and mastering web development. I will not stop until I become the Web
                 Development
                 Hero.</p>
